# CardMind

./: .claudeignore  .dockerignore  .env.example  .eslintrc.cjs  .eslintrc.js  .gitattributes  .gitignore  .metadata  .prettierrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FINAL_REPORT.md  IMPLEMENTATION_SUMMARY.md  README.md  SPECS_STATUS.md  SPEC_CODING_IMPROVEMENTS.md  SPEC_REFACTOR_SUMMARY.md  SPEC_SYNC_REPORT.md  TODO.md  VERIFICATION_REPORT.md  analysis_options.yaml  analysis_report_after.txt  analysis_report_before.txt  android_emulator_setup_guide.md  android_packaging_solution.md  cardmind.pen  check-msvc.bat  commitlint.config.js  deployment.md  dev.bat  dev.sh  docker-build-and-push.sh  docker-compose.yml  electron-main.js  electron-main.mjs  failed_tests_detail.txt  fix_output.txt  (+27 more)
rust/: Cargo.toml  DIR.md  clippy.toml  rustfmt.toml  simple_pool_spec  single_pool_flow_spec.rs
rust/.cargo/: config.toml
rust/examples/: loro_api_test.rs  simple_pool_spec.rs  single_pool_flow_spec.rs
rust/fuzz/: Cargo.toml
rust/fuzz/fuzz_targets/: fuzz_password_strength.rs  fuzz_pool_hash.rs  fuzz_pool_validation.rs
rust/src/: DIR.md  api.rs  frb_generated.rs  lib.rs
rust/src/api/: card.rs  device_config.rs  error.rs  identity.rs  impl.rs  impl_.rs  ir.rs  loro_export.rs  mdns_discovery.rs  mod.rs  pool.rs  recovery_contract.rs  sync.rs  test.rs  trust_list.rs  utils.rs
rust/src/application/: backend_service.rs  mod.rs
rust/src/cli/: mod.rs
rust/src/crdt/: mod.rs
rust/src/db/: mod.rs
rust/src/http/: mod.rs
rust/src/mcp/: mod.rs
rust/src/models/: DIR.md  api_error.rs  card.rs  card_network.rs  device.rs  device_config.rs  error.rs  mod.rs  network.rs  network_device.rs  pool.rs  pool_runtime.rs  resident_network.rs  sync.rs
rust/src/net/: DIR.md  codec.rs  endpoint.rs  messages.rs  mod.rs  pool_network.rs  session.rs  sync.rs
rust/src/network/: mod.rs
rust/src/p2p/: discovery.rs  identity.rs  mod.rs  multi_peer_sync.rs  network.rs  sync.rs  sync_manager.rs  sync_service.rs
rust/src/runtime/: config.rs  entry_manager.rs  mod.rs
rust/src/security/: app_lock.rs  keyring_store.rs  mod.rs  password.rs
rust/src/storage/: mod.rs
rust/src/store/: DIR.md  card_store.rs  loro_store.rs  mod.rs  path_resolver.rs  pool_store.rs  sqlite_store.rs  trust_list.rs
rust/src/utils/: DIR.md  mod.rs  uuid_v7.rs
rust/tests/: DIR.md  api_error_test.rs  api_handle_test.rs  backend_api_contract_test.rs  card_api_delete_restore_test.rs  card_model_test.rs  card_pool_filter_test.rs  card_query_contract_test.rs  card_store_feature_test.rs  card_store_persist_test.rs  card_store_test.rs  common_types_feature_test.rs  common_types_spec.rs  contract.rs  crdt_test.rs  current_user_pool_view_test.rs  db_test.rs  device_config_feature_test.rs  device_config_test.rs  dual_layer_feature_test.rs  dual_layer_test.rs  integration.rs  integration_exact.rs  loro_integration_feature_test.rs  loro_integration_test.rs  loro_persist_test.rs  loro_store_test.rs  loro_sync_feature_test.rs  loro_sync_test.rs  mdns_discovery_feature_test.rs  mdns_discovery_test.rs  p2p_network_test.rs  path_resolver_test.rs  performance_test.rs  pool_detail_contract_test.rs  pool_join_by_code_test.rs  pool_model_feature_test.rs  pool_model_test.rs  pool_multi_member_sync_test.rs  pool_net_codec_test.rs  (+41 more)
rust/tests/contract/api/: backend_api_contract.rs  backend_config_contract.rs  phase2_recovery_contract_test.rs  sync_api_contract.rs
rust/tests/integration/: api_integration_test.rs  api_runtime_view_integration_test.rs
rust/tests/integration/api/: api_handle_test.rs  app_config_test.rs  card_delete_restore_test.rs  card_query_test.rs  current_user_view_test.rs  pool_detail_test.rs  pool_idempotency_test.rs  pool_join_test.rs  pool_lifecycle_test.rs  pool_note_attachment_test.rs
rust/tests/integration/store/: architecture_contract_test.rs  projection_flow_test.rs
rust/tests/integration/sync/: api_flow_test.rs  multi_member_sync_test.rs  net_codec_test.rs  net_endpoint_test.rs  net_session_test.rs  network_flow_test.rs  pool_sync_test.rs
rust/tests/unit/: api_functions_test.rs  api_internal_test.rs  api_runtime_view_test.rs  api_utils_test.rs  pool_invite_store_test.rs
rust/tests/unit/application/: backend_service_test.rs
rust/tests/unit/cli/: debug_console_test.rs
rust/tests/unit/domain/: card_model_test.rs
rust/tests/unit/models/: api_error_test.rs  error_test.rs
rust/tests/unit/net/: endpoint_test.rs  net_codec_test.rs  pool_network_sync_test.rs  (+2 more)
rust/tool/: generate_bridge.dart
rust/tool/boundary_scanner/: Cargo.toml
rust/tools/: test-with-net.sh  test.entitlements
server/: .env  .env.example  Cargo.toml  Dockerfile  rust-toolchain.toml
server/entity/: Cargo.toml
server/entity/src/: card.rs  lib.rs
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20250226_082504_create_card_table.rs
server/migrations/: 20250121000001_create_cards_table.sql  V1__initial.sql
server/migrations/postgres/: 20250211_init.sql
server/migrations/sqlite/: 20250211_init.sql
server/src/: api.rs  config.rs  database.rs  lib.rs  main.rs  sync.rs
server/src/entity/: card.rs  mod.rs
server/src/handler/: card_handler.rs  mod.rs
server/src/service/: card_service.rs  mod.rs
server/static/: index.html
(+2743 files in other folders)
