[package]
name = "cardmind_rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v7", "serde", "fast-rng"] }
thiserror = "1"
loro = "1.10.3"
rusqlite = { version = "0.31", features = ["bundled"] }
base64 = "0.22"
flutter_rust_bridge = { version = "=2.11.1", features = ["uuid"] }
postcard = { version = "1", features = ["alloc"] }
iroh = { version = "0.96.1", features = ["address-lookup-mdns"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[dev-dependencies]
tempfile = "3"
