[package]
name = "cardmind-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
axum = { version = "0.7.2", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5.0", features = ["cors"] }
sqlx = { version = "0.7.3", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "migrate",
    "chrono",
    "macros"
], default-features = false }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
chrono = { version = "0.4.31", features = ["serde"] }
directories = "5.0.1"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
