[package]
name = "cardmind-server"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = { version = "1.3" }
poem-openapi = { version = "3.0", features = ["swagger-ui"] }
tokio = { version = "1.36", features = ["full"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
async-trait = "0.1"
thiserror = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
