[package]
name = "cardmind-server"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = { version = "1.3.59" }
poem-openapi = { version = "3.0.5" }
tokio = { version = "1.35.1", features = ["full"] }
sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
async-trait = "0.1"
thiserror = "1.0.56"
glob = "0.3"
dotenv = "0.15.0"
once_cell = "1.19"
regex = "1.10.3"
lazy_static = "1.4.0"
dirs = "5.0.1"
async-std = { version = "1.12.0", features = ["attributes"] }
env_logger = "0.10.1"
log = "0.4.20"
migration = { path = "./migration" }
entity = { path = "./entity" }

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[workspace]
members = [".", "migration", "entity"]
