[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
# 使用entity模块而不是直接依赖主项目
entity = { path = "../entity" }

# 使用最新版本的 sea-orm-migration
[dependencies.sea-orm-migration]
version = "1.1.0"
features = [
  # 启用必要的异步运行时和数据库驱动
  # 根据您的项目需要选择合适的特性
  "runtime-tokio-rustls",  # 与主项目保持一致
  "sqlx-sqlite",               
]
